Ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: k8s-ingress 
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  spec:
    ingressClassName: nginx 
    rules: 
      - http:
          paths:
            - path: /nginx(/|$)(.*)
              pathType: Prefix 
              backend:
                service:
                  name: nginx-svc
                  port: 80
            - path: /httpd(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: httpd-svc
                  port:
                    number: 80
            - path: /(.*)
              pathType: Prefix
              backend:
                service:
                  name: nginx-svc 
                  port:
                    number: 80
